--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,69 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  /* ff 3.6+ */
+  background: -moz-radial-gradient(
+    circle at 81% 51%,
+    rgba(230, 228, 242, 1) 0%,
+    rgba(230, 228, 242, 1) 17%,
+    rgba(208, 204, 217, 1) 27%,
+    rgba(240, 240, 242, 1) 69%,
+    rgba(208, 204, 217, 1) 83%,
+    rgba(181, 176, 191, 1) 100%
+  );
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-radial-gradient(
+    circle at 81% 51%,
+    rgba(230, 228, 242, 1) 0%,
+    rgba(230, 228, 242, 1) 17%,
+    rgba(208, 204, 217, 1) 27%,
+    rgba(240, 240, 242, 1) 69%,
+    rgba(208, 204, 217, 1) 83%,
+    rgba(181, 176, 191, 1) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-radial-gradient(
+    circle at 81% 51%,
+    rgba(230, 228, 242, 1) 0%,
+    rgba(230, 228, 242, 1) 17%,
+    rgba(208, 204, 217, 1) 27%,
+    rgba(240, 240, 242, 1) 69%,
+    rgba(208, 204, 217, 1) 83%,
+    rgba(181, 176, 191, 1) 100%
+  );
+
+  /* ie 10+ */
+  background: -ms-radial-gradient(
+    circle at 81% 51%,
+    rgba(230, 228, 242, 1) 0%,
+    rgba(230, 228, 242, 1) 17%,
+    rgba(208, 204, 217, 1) 27%,
+    rgba(240, 240, 242, 1) 69%,
+    rgba(208, 204, 217, 1) 83%,
+    rgba(181, 176, 191, 1) 100%
+  );
+
+  /* global 92%+ browsers support */
+  background: radial-gradient(
+    circle at 81% 51%,
+    rgba(230, 228, 242, 1) 0%,
+    rgba(230, 228, 242, 1) 17%,
+    rgba(208, 204, 217, 1) 27%,
+    rgba(240, 240, 242, 1) 69%,
+    rgba(208, 204, 217, 1) 83%,
+    rgba(181, 176, 191, 1) 100%
+  );
 }
