--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,12 +33,12 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   scroll-behavior: smooth;
 }
 
+/* 
 body {
-  /* ff 3.6+ */
   background: -moz-radial-gradient(
     circle at 81% 51%,
     rgba(230, 228, 242, 1) 0%,
@@ -49,7 +49,6 @@ body {
     rgba(181, 176, 191, 1) 100%
   );
 
-  /* safari 5.1+,chrome 10+ */
   background: -webkit-radial-gradient(
     circle at 81% 51%,
     rgba(230, 228, 242, 1) 0%,
@@ -60,7 +59,6 @@ body {
     rgba(181, 176, 191, 1) 100%
   );
 
-  /* opera 11.10+ */
   background: -o-radial-gradient(
     circle at 81% 51%,
     rgba(230, 228, 242, 1) 0%,
@@ -71,7 +69,6 @@ body {
     rgba(181, 176, 191, 1) 100%
   );
 
-  /* ie 10+ */
   background: -ms-radial-gradient(
     circle at 81% 51%,
     rgba(230, 228, 242, 1) 0%,
@@ -82,7 +79,6 @@ body {
     rgba(181, 176, 191, 1) 100%
   );
 
-  /* global 92%+ browsers support */
   background: radial-gradient(
     circle at 81% 51%,
     rgba(230, 228, 242, 1) 0%,
@@ -92,4 +88,5 @@ body {
     rgba(208, 204, 217, 1) 83%,
     rgba(181, 176, 191, 1) 100%
   );
-}
+} 
+  */
